--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -2,7 +2,7 @@
   <div class="col-md-6">
     <h2>Login</h2>
 
-    <form class="form login-form">
+    <form class="form" id="login-form">
       <div class="form-group">
         <label for="email-login">email:</label>
         <input class="form-input" type="text" id="email-login" />
@@ -19,18 +19,27 @@
   <div class="col-md-6">
     <h2>Signup</h2>
 
-    <form class="form signup-form">
+    <form id="signup-form">
       <div class="form-group">
         <label for="name-signup">name:</label>
         <input class="form-input" type="text" id="name-signup" />
       </div>
       <div class="form-group">
-        <label for="email-signup">email:</label>
-        <input class="form-input" type="text" id="email-signup" />
+        <label for="username-signup">username:</label>
+        <input class="form-input" type="text" id="username-signup" />
       </div>
       <div class="form-group">
         <label for="password-signup">password:</label>
         <input class="form-input" type="password" id="password-signup" />
+      </div>
+      <div class="form-group">
+        <label for="email-signup">email:</label>
+        <input class="form-input" type="text" id="email-signup" />
+      </div>
+      
+      <div class="form-group">
+        <label for="city-signup">city:</label>
+        <input class="form-input" type="text" id="city-signup" />
       </div>
       <div class="form-group">
         <button class="btn btn-primary" type="submit">signup</button>
@@ -38,5 +47,8 @@
     </form>
   </div>
 </div>
-
-<script src="./js/login.js"></script>
+{{!-- <script>console.log('sanity check')
+  const signupForm = document.getElementById('signup-form');
+  console.log(signupForm)
+</script> --}}
+<script src="/js/login.js"></script>
