--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,54 +1,35 @@
-<div class="row">
-  <div class="col-md-6">
-    <h2>Login</h2>
+<div id="menu" class="w3-modal">
+  <div class="w3-modal-content w3-animate-zoom">
+    <div class="w3-container w3-black w3-display-container">
+      <span onclick="document.getElementById('menu').style.display='none'"
+        class="w3-button w3-display-topright w3-large">x</span>
+      <h1>
+        <div class="row">
+          <div class="col-md-6">
+            <h2>Login</h2>
 
-    <form class="form" id="login-form">
-      <div class="form-group">
-        <label for="email-login">email:</label>
-        <input class="form-input" type="text" id="email-login" />
-      </div>
-      <div class="form-group">
-        <label for="password-login">password:</label>
-        <input class="form-input" type="password" id="password-login" />
-      </div>
-      <div class="form-group">
-        <button class="btn btn-primary" type="submit">login</button>
-      </div>
-    </form>
-  </div>
-  <div class="col-md-6">
-    <h2>Signup</h2>
+            <form class="form" id="login-form">
+              <div class="form-group">
+                <label for="email-login">email:</label>
+                <input class="form-input" type="text" id="email-login" />
+              </div>
+              <div class="form-group">
+                <label for="password-login">password:</label>
+                <input class="form-input" type="password" id="password-login" />
+              </div>
+              <div class="form-group">
+                <button class="btn btn-primary" type="submit">Log in to your Account!</button>
+              </div>
+            </form>
+          </div>
+      </h1>
+    </div>
 
-    <form id="signup-form">
-      <div class="form-group">
-        <label for="name-signup">name:</label>
-        <input class="form-input" type="text" id="name-signup" />
-      </div>
-      <div class="form-group">
-        <label for="username-signup">username:</label>
-        <input class="form-input" type="text" id="username-signup" />
-      </div>
-      <div class="form-group">
-        <label for="password-signup">password:</label>
-        <input class="form-input" type="password" id="password-signup" />
-      </div>
-      <div class="form-group">
-        <label for="email-signup">email:</label>
-        <input class="form-input" type="text" id="email-signup" />
-      </div>
-      
-      <div class="form-group">
-        <label for="city-signup">city:</label>
-        <input class="form-input" type="text" id="city-signup" />
-      </div>
-      <div class="form-group">
-        <button class="btn btn-primary" type="submit">signup</button>
-      </div>
-    </form>
-  </div>
-</div>
-{{!-- <script>console.log('sanity check')
-  const signupForm = document.getElementById('signup-form');
-  console.log(signupForm)
-</script> --}}
-<script src="/js/login.js"></script>
+
+
+    {{!--
+    <script>console.log('sanity check')
+      const signupForm = document.getElementById('signup-form');
+      console.log(signupForm)
+    </script> --}}
+    <script src="/js/login.js"></script>
