--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -95,7 +95,7 @@
       </div>
       <div class="w3-container">
         <h5>Need to Create an Account?
-          </br> <a href="/signup"><b>SIGN UP HERE</b></a></h5>
+          </br> <a href="/"><b>SIGN UP HERE</b></a></h5>
       </div>
     </div>
   </div>
@@ -128,7 +128,7 @@
   </header>
   <main class="container container-fluid mt-5">
     <!-- Render the sub layout -->
-
+    {{{body}}}
   </main>
   <!-- Footer -->
   <footer class="w3-black w3-container w3-padding-32">
