Add basic searchbar

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,3 +1,13 @@
+{{!-- Search/Filter --}}
+<div id="searchWrapper">
+  <input
+    type="text"
+    name="searchBar"
+    id="searchBar"
+    placeholder="Enter a name, city, pickup, or dropoff location to filter search"
+  />
+</div>
+
 <!-- Loop over each object in the riders array -->
 {{#each riders as |rider| }}
 <div class="row mb-4 rider">
