--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -97,8 +97,17 @@
         <h5>Need to Create an Account?
           </br> <a href="/"><b>SIGN UP HERE</b></a></h5>
       </div>
+      <main class="container container-fluid mt-5">
+    <!-- Render the sub layout -->
+ {{{ body }}}
+  </main>
     </div>
   </div>
+
+  {{!-- <main class="container container-fluid mt-5">
+    <!-- Render the sub layout -->
+ {{{ body }}}
+  </main> --}}
 
   <!-- About Modal -->
   <div id="contact" class="w3-modal">
@@ -128,7 +137,7 @@
   </header>
   <main class="container container-fluid mt-5">
     <!-- Render the sub layout -->
-
+ 
   </main>
   <!-- Footer -->
   <footer class="w3-black w3-container w3-padding-32">
