--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -43,8 +43,7 @@
           Account</button></p>
       <p><button onclick="document.getElementById('contact').style.display='block'" class="w3-button w3-black">About
           Us</button></p>
-      <p><button onclick="document.getElementById('faqs').style.display='block'"
-          class="w3-button w3-black">FAQs</button></p>
+
     </div>
     <!-- Description on Homepage -->
     <div class="w3-display-bottomleft w3-container">
@@ -54,29 +53,7 @@
 
     </div>
   </div>
-  <!-- FAQs Modal -->
-  <div id="faqs" class="w3-modal">
-    <div class="w3-modal-content w3-animate-zoom">
-      <div class="w3-container w3-black w3-display-container">
-        <span onclick="document.getElementById('faqs').style.display='none'"
-          class="w3-button w3-display-topright w3-large">x</span>
-        <h1>How do you verify your users?</h1>
-      </div>
-      <div class="w3-container">
-        <h5>In order to book a ride both the rider and driver need to verify their phone numbers and login using
-          Facebook. <b>Your phone number will only be shown to each other after you book a ride.</b></h5>
-        <h5>To boost confidence in the service community members are asked to use their real names <b>(not
-            nicknames)</b> and real images only. </h5>
-      </div>
-      <div class="w3-container w3-black">
-        <h1>Both sides have to agree for the ride to take place.</h1>
-      </div>
-      <div class="w3-container">
-        <h5>Both driver and passenger will be able to view each other’s profile and have the choice of who they will or
-          will not ride with. </h5>
-      </div>
-    </div>
-  </div>
+
   <!-- SIGN IN MENU Modal -->
   <div id="menu" class="w3-modal">
     <div class="w3-modal-content w3-animate-zoom">
@@ -141,6 +118,7 @@
   {{#if logged_in}}
   <script src="/js/logout.js"></script>
   {{/if}}
+  {{{ body }}}
 </body>
 
 </html>
