moved title to topmiddle

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -32,7 +32,7 @@
 <body>
 
   <div class="bgimg w3-display-container w3-text-black">
-    <div class="w3-display-middle w3-jumbo">
+    <div class="w3-padding w3-display-topmiddle w3-jumbo">
       <p class="animate__animated animate__fadeOutDown"> &#128106; </p>
       <p class="animate__animated animate__backInLeft"> BUSY PARENTS</p>
 
