--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,32 +1,26 @@
-{{!-- <div id="menu" class="w3-modal"> --}}
-  {{!-- <div class="w3-modal-content w3-animate-zoom">
-    <div class="w3-container w3-black w3-display-container">
-      <span onclick="document.getElementById('menu').style.display='none'"
-        class="w3-button w3-display-topright w3-large">x</span>
-      <h1>
-        <div class="row">
-          <div class="col-md-6">
-            <h2>Login</h2>
+<div class="w3-row-padding w3-grayscale" style="margin-bottom:128px">
+  <div class="w3-half">
+    <div class="row">
+      <div class="col-md-6">
+        <h2>Login</h2>
 
-            <form class="form" id="login-form">
-              <div class="form-group">
-                <label for="email-login">email:</label>
-                <input class="form-input" type="text" id="email-login" />
-              </div>
-              <div class="form-group">
-                <label for="password-login">password:</label>
-                <input class="form-input" type="password" id="password-login" />
-              </div>
-              <div class="form-group">
-                <button class="btn btn-primary" type="submit">Log in to your Account!</button>
-              </div>
-            </form>
+        <form class="form" id="login-form">
+          <div class="form-group">
+            <label for="email-login">email:</label>
+            <input class="form-input" type="text" id="email-login" />
           </div>
+          <div class="form-group">
+            <label for="password-login">password:</label>
+            <input class="form-input" type="password" id="password-login" />
+          </div>
+          <div class="form-group">
+            <button class="btn btn-primary" type="submit">Log in to your Account!</button>
+          </div>
+        </form>
+      </div>
       </h1>
-    </div> --}}
-    <div>
-      login
     </div>
+
 
 
 
