--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,163 +1,60 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html>
 
 <head>
-  <!-- Required meta tags -->
-  <meta charset="utf-8">
+  <title>Busy Parents</title>
+  <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="../../public/stylesheets/style.css" type="stylesheet" />
-  <!-- Bootstrap CSS -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-  <script src="https://code.jquery.com/jquery.js"></script>
-  <link href="stylesheets/style.css" rel="stylesheet">
-  <title>FUR-Ever Home!</title>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Mallanna&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <style>
+    body,
+    h1 {
+      font-family: "Raleway", Arial, sans-serif
+    }
+
+    h1 {
+      letter-spacing: 6px
+    }
+
+    .w3-row-padding img {
+      margin-bottom: 12px
+    }
+  </style>
 </head>
 
 <body>
-<<<<<<< HEAD
-  <div>
-    {{{ body }}}
-  </div>
 
-  <!-- Bootstrap Bundle with Popper -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous">
-    </script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <!-- !PAGE CONTENT! -->
+  <div class="w3-content" style="max-width:1500px">
 
-  <script type="text/javascript" src="js/login.js"></script>
-  <script type="text/javascript" src="js/members.js"></script>
-  <script type="text/javascript" src="js/signup.js"></script>
-  <script src="js/addPet.js" type="text/javascript"></script>
-  <script src="js/privateOwner.js" type="text/javascript"></script>
-  <footer class="footer mt-auto">
-    <div class="container">
-      <p class="text-muted mx-auto text-center">
-        &copy; Copyright 2021
-      </p>
-    </div>
-=======
+    <!-- Header -->
+    <header class="w3-panel w3-center w3-opacity" style="padding:128px 16px">
+      <h1 class="w3-xlarge">
+        <p class="animate__animated animate__fadeInTopRight">Busy
+        </p>
+      </h1>
+      <h1>
+        <p class="animate__animated animate__fadeInBottomLeft">Parents</p>
+      </h1>
 
-  <div class="bgimg w3-display-container w3-text-black">
-    <div class="w3-padding w3-display-topmiddle w3-jumbo">
-      <p class="animate__animated animate__fadeOutDown"> &#128106; </p>
-      <p class="animate__animated animate__backInLeft"> BUSY PARENTS</p>
-
-    </div>
-    <div class="w3-display-topleft w3-container w3-xlarge">
-
-      <p><button onclick="document.getElementById('menu').style.display='block'" class="w3-button w3-black">My
-          Account</button></p>
-      <p><button onclick="document.getElementById('contact').style.display='block'" class="w3-button w3-black">About
-          Us</button></p>
-      <p><button onclick="document.getElementById('faqs').style.display='block'"
-          class="w3-button w3-black">FAQs</button></p>
-    </div>
-    <!-- Description on Homepage -->
-    <div class="w3-display-bottomleft w3-container">
-      <p class="w3-xlarge">An online platform for connecting Carpools for your kids to trusted Parent drivers- </p>
-      <p class="w3-large">Who are also traveling
-        in the same direction and want to share trips!</p>
-
-    </div>
-  </div>
-  <!-- FAQs Modal -->
-  <div id="faqs" class="w3-modal">
-    <div class="w3-modal-content w3-animate-zoom">
-      <div class="w3-container w3-black w3-display-container">
-        <span onclick="document.getElementById('faqs').style.display='none'"
-          class="w3-button w3-display-topright w3-large">x</span>
-        <h1>How do you verify your users?</h1>
+      <div class="w3-padding-32">
+        <div class="w3-bar w3-border">
+          <a href="/signup" class="w3-bar-item w3-button w3-light-grey">Signup</a>
+          <a href="/login" class="w3-bar-item w3-button w3-light-grey">Log In</a>
+          <a href="#" class="w3-bar-item w3-button w3-hide-small">FAQs</a>
+        </div>
       </div>
-      <div class="w3-container">
-        <h5>In order to book a ride both the rider and driver need to verify their phone numbers and login using
-          Facebook. <b>Your phone number will only be shown to each other after you book a ride.</b></h5>
-        <h5>To boost confidence in the service community members are asked to use their real names <b>(not
-            nicknames)</b> and real images only. </h5>
-      </div>
-      <div class="w3-container w3-black">
-        <h1>Both sides have to agree for the ride to take place.</h1>
-      </div>
-      <div class="w3-container">
-        <h5>Both driver and passenger will be able to view each other’s profile and have the choice of who they will or
-          will not ride with. </h5>
-      </div>
-    </div>
-  </div>
-  <!-- SIGN IN MENU Modal -->
-  <div id="menu" class="w3-modal">
-    <div class="w3-modal-content w3-animate-zoom">
-      <div class="w3-container w3-black w3-display-container">
-        <span onclick="document.getElementById('menu').style.display='none'"
-          class="w3-button w3-display-topright w3-large">x</span>
-        <h1>
-          <!-- Conditionally render login or logout links -->
-          {{#if logged_in}}
-          <a href="/profile">profile</a> |
-          <button class="no-button" id="logout">Logout</button>
-          {{else}}
-          <a href="/login">Login</a>
-          {{/if}}
-        </h1>
-      </div>
-      <div class="w3-container">
-        <h5>Need to Create an Account?
-          </br> <a href="/"><b>SIGN UP HERE</b></a></h5>
-      </div>
-      <main class="container container-fluid mt-5">
-    <!-- Render the sub layout -->
- {{{ body }}}
-  </main>
-    </div>
-  </div>
+    </header>
 
-  {{!-- <main class="container container-fluid mt-5">
-    <!-- Render the sub layout -->
- {{{ body }}}
-  </main> --}}
-
-  <!-- About Modal -->
-  <div id="contact" class="w3-modal">
-    <div class="w3-modal-content w3-animate-zoom">
-      <div class="w3-container w3-black">
-        <span onclick="document.getElementById('contact').style.display='none'"
-          class="w3-button w3-display-topright w3-large">x</span>
-        <h1>Contact</h1>
+    <body>
+      <div>
+        {{{ body }}}
       </div>
-      <div class="w3-container">
-        <p>Reserve a table, ask for today's special or just send us a message:</p>
-        <form action="/action_page.php" target="_blank">
-          <p><input class="w3-input w3-padding-16 w3-border" type="text" placeholder="Name" required name="Name"></p>
-          <p><input class="w3-input w3-padding-16 w3-border" type="number" placeholder="How many people" required
-              name="People"></p>
-          <p><input class="w3-input w3-padding-16 w3-border" type="datetime-local" placeholder="Date and time" required
-              name="date" value="2020-11-16T20:00"></p>
-          <p><input class="w3-input w3-padding-16 w3-border" type="text" placeholder="Message \ Special requirements"
-              required name="Message"></p>
-          <p><button class="w3-button" type="submit">SEND MESSAGE</button></p>
-        </form>
-      </div>
-    </div>
-  </div>
 
-  </nav>
-  </header>
-  <main class="container container-fluid mt-5">
-    <!-- Render the sub layout -->
- 
-  </main>
-  <!-- Footer -->
-  <footer class="w3-black w3-container w3-padding-32">
-    <p class="w3-left">Link to <a href="https://github.com/crumwj22/busy-parents" target="_blank"
-        class="w3-hover-text-green">GitHub</a>
-    </p>
->>>>>>> 48a13f4e3ab38a60109385a68c885feb6594672e
-  </footer>
-</body>
+
+    </body>
 
 </html>
