--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -32,6 +32,7 @@
 
     <!-- Header -->
     <header class="w3-panel w3-center w3-opacity" style="padding:128px 16px">
+      <h1>Welcome </h1>
       <h1 class="w3-xlarge">
         <p class="animate__animated animate__fadeInTopRight">Busy
         </p>
@@ -40,21 +41,13 @@
         <p class="animate__animated animate__fadeInBottomLeft">Parents</p>
       </h1>
 
-      <div class="w3-padding-32">
-        <div class="w3-bar w3-border">
-          <a href="/signup" class="w3-bar-item w3-button w3-light-grey">Signup</a>
-          <a href="/login" class="w3-bar-item w3-button w3-light-grey">Log In</a>
-          <a href="#" class="w3-bar-item w3-button w3-hide-small">FAQs</a>
+
+      <body>
+        <div>
+          {{{ body }}}
         </div>
-      </div>
-    </header>
-
-    <body>
-      <div>
-        {{{ body }}}
-      </div>
 
 
-    </body>
+      </body>
 
 </html>
