--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,7 +1,12 @@
-<div class="w3-row-padding w3-grayscale" style="margin-bottom:128px">
-  <div class="w3-half">
-    <div class="row">
-      <div class="col-md-6">
+<div class="container">
+  <div class="row">
+    <div class="col-md-10 col-md-offset-3 mx-auto text-center">
+      <p>
+      <p class="w3-large">An online platform for connecting Carpools for your kids to trusted Parent drivers.</p>
+      </p>
+      <br>
+      <div class="w3-center w3-row-padding w3-grayscale" style="margin-bottom:128px">
+
         <h2>Login</h2>
 
         <form class="form" id="login-form">
@@ -18,15 +23,16 @@
           </div>
         </form>
       </div>
-      </h1>
+      <p>First time here? Click <a href="signup">here</a> to sign up!</p>
     </div>
+  </div>
 
 
 
 
-    {{!--
-    <script>console.log('sanity check')
-      const signupForm = document.getElementById('signup-form');
-      console.log(signupForm)
-    </script> --}}
-    <script src="/js/login.js"></script>
+  {{!--
+  <script>console.log('sanity check')
+    const signupForm = document.getElementById('signup-form');
+    console.log(signupForm)
+  </script> --}}
+  <script src="/js/login.js"></script>
