--- a/views/members.handlebars
+++ b/views/members.handlebars
@@ -1,8 +1,8 @@
 <div class="w3-padding-32">
   <div class="w3-bar w3-border">
-    <a href="#" class="w3-bar-item w3-button">Home</a>
+    <a href="/" class="w3-bar-item w3-button">Home</a>
     <a href="#" class="w3-bar-item w3-button w3-light-grey">My Account</a>
-    <a href="#" class="w3-bar-item w3-button">Log Out</a>
+    <a href="/logout" class="w3-bar-item w3-button">Log Out</a>
     <a href="#" class="w3-bar-item w3-button w3-hide-small">FAQs</a>
   </div>
 </div>
