--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -30,7 +30,8 @@
           <input class="form-input" type="text" id="city-signup" />
         </div>
         <div class="form-group">
-          <button class="btn btn-primary" type="submit">Sign me Up for a New Account!</button>
+          <button class="btn btn-primary" type="submit">Sign me Up for a New
+            Account!</button>
         </div>
       </form>
     </div>
