--- a/views/members.handlebars
+++ b/views/members.handlebars
@@ -43,4 +43,4 @@
 </div>
 
 
-<script type="text/javascript" src="js/members.js"></script>
+<script type="text/javascript" src="js/display-search.js"></script>
