--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,11 +1,11 @@
-<div class="container">
+{{!-- <div class="container">
   <div class="row">
     <div class="col-md-10 col-md-offset-3 mx-auto text-center">
       <p>
       <p class="w3-large">An online platform for connecting Carpools for your kids to trusted Parent drivers.</p>
       </p>
       <br>
-      <div class="w3-center w3-row-padding w3-grayscale" style="margin-bottom:128px">
+      <div class="w3-center w3-row-padding w3-grayscale" style="margin-bottom:128px"> --}}
 
         <h2>Login</h2>
 
@@ -30,9 +30,9 @@
 
 
 
-  {{!--
+  
   <script>console.log('sanity check')
     const signupForm = document.getElementById('signup-form');
     console.log(signupForm)
-  </script> --}}
+  </script>
   <script src="/js/login.js"></script>
