--- a/views/members.handlebars
+++ b/views/members.handlebars
@@ -4,7 +4,7 @@
     <a href="/api/comment" class="w3-bar-item w3-button w3-light-grey">My Account</a>
     {{!-- <a href="/logout" class="w3-bar-item w3-button">Log Out</a> --}}
     <button type="button" class="w3-bar-item w3-button" id="logout" >Logout</button>
-    <a href="#" class="w3-bar-item w3-button w3-hide-small">FAQs</a>
+    {{!-- <a href="#" class="w3-bar-item w3-button w3-hide-small">FAQs</a> --}}
   </div>
   
 </div>
