--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -31,7 +31,7 @@
   <div class="w3-content" style="max-width:1500px">
 
     <!-- Header -->
-    {{!-- <header class="w3-panel w3-center w3-opacity" style="padding:128px 16px">
+    <header class="w3-panel w3-center w3-opacity" style="padding:128px 16px">
       <h1>Welcome </h1>
       <h1 class="w3-xlarge">
         <p class="animate__animated animate__fadeInTopRight">Busy
@@ -39,15 +39,15 @@
       </h1>
       <h1>
         <p class="animate__animated animate__fadeInBottomLeft">Parents</p>
-      </h1> --}}
+      </h1>
 
 
-      
-        <div>
-          {{{ body }}}
-        </div>
+
+      <div>
+        {{{ body }}}
+      </div>
 
 
-      </body>
+</body>
 
 </html>
