fixed logout route

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -9,8 +9,8 @@
 
         <h2>Login</h2>
 
-        <form class="form" id="login-form">
-          <div class="form-group">
+        <form class="form" id="login-form" style="hieght: 500px;">
+          <div class="form-group" style="margin-bottom:12px">
             <label for="email-login">email:</label>
             <input class="form-input" type="text" id="email-login" />
           </div>
