--- a/views/members.handlebars
+++ b/views/members.handlebars
@@ -3,8 +3,8 @@
     <a href="/" class="w3-bar-item w3-button">Home</a>
 
     <a href="#" class="w3-bar-item w3-button w3-light-grey">My Account</a>
-    <a href="/logout" class="w3-bar-item w3-button">Log Out</a>
-    <a href="#" class="w3-bar-item w3-button w3-hide-small">FAQs</a>
+    <class="w3-bar-item w3-button" onclick="logout()">Log Out</a>
+      <a href="#" class="w3-bar-item w3-button w3-hide-small">FAQs</a>
 
   </div>
 </div>
