driver data gets pushed to my account page/still JSON, need to render to cards

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -9,12 +9,12 @@
 
         <h2>Login</h2>
 
-        <form class="form" id="login-form" style="hieght: 500px;">
+        <form class="form" id="login-form" style="">
           <div class="form-group" style="margin-bottom:12px">
             <label for="email-login">email:</label>
             <input class="form-input" type="text" id="email-login" />
           </div>
-          <div class="form-group">
+          <div class="form-group" style="margin-bottom:12px">
             <label for="password-login">password:</label>
             <input class="form-input" type="password" id="password-login" />
           </div>
