--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -9,7 +9,7 @@
 
         <h2>Login</h2>
 
-        <form class="form" id="login-form" style="">
+        <form class="w3-container" id="login-form">
           <div class="form-group" style="margin-bottom:12px">
             <label for="email-login">email:</label>
             <input class="form-input" type="text" id="email-login" />
