--- a/views/my-account.handlebars
+++ b/views/my-account.handlebars
@@ -1,14 +1,21 @@
 <div class="w3-padding-32">
+  <div class="w3-bar w3-border w3-gray">
+      <H1>
+          User Dashboard
+      </H1>
+    </div>
+</div>
+
+<div class="w3-padding-32">
   <div class="w3-bar w3-border">
     <a href="/" class="w3-bar-item w3-button">Home</a>
-
     <a href="/my-account" class="w3-bar-item w3-button w3-light-grey">My Account</a>
     <a href="/api/users/logout" class="w3-bar-item w3-button">Log Out</a>
-    
-
   </div>
 </div>
 <!-- Comment Card -->
+
+
 <p class="w3-center"><button class="w3-button w3-black" onclick="myFunction('demo1')" id="myBtn"><b>Replies  </b>
         <span class="w3-tag w3-white">1</span></button></p>
 <p class="w3-clear"></p>
