fixed id's for pick up and drop locations

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -10,7 +10,9 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <style>
-    body,
+    
+    body, 
+
     h1 {
       font-family: "Raleway", Arial, sans-serif
     }
@@ -22,6 +24,7 @@
     .w3-row-padding img {
       margin-bottom: 12px
     }
+
   </style>
 </head>
 
@@ -40,7 +43,7 @@
       <h1>
         <p class="animate__animated animate__fadeInBottomLeft">Parents</p>
       </h1>
-
+{{!-- <img src="/public/css/image3.png" class="w3-image" width="992" height="1108"> --}}
 
 
       <div>
