--- a/views/my-account.handlebars
+++ b/views/my-account.handlebars
@@ -1,5 +1,5 @@
 <div class="w3-padding-32">
-  <div class="w3-bar w3-border w3-gray">
+  <div class="w3-center w3-grey w3-padding-16">
       <H1>
           User Dashboard
       </H1>
