minor changes to layouts

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -19,9 +19,9 @@
 {{!-- <img src="/public/css/image3.png" class="w3-image" width="992" height="1108"> --}}
         <h2>Login</h2>
         
-      <div class="w3-cell-row w3-right">
+      
         
-        <form class="w3-container" id="login-form" 
+        <form class="w3-container" id="login-form">
           <div class="form-group" style="margin-bottom:12px">
             <label for="email-login">email:</label>
             <input class="form-input" type="text" id="email-login" />
@@ -34,9 +34,9 @@
             <button class="btn btn-primary" type="submit">Log in to your Account!</button>
           </div>
         </form>
-      {{!-- </div> --}}
-        </div>
-      <p>First time here? Click <a href="signup">here</a> to sign up!</p>
+        <p>
+          First time here? Click <a href="signup">here</a> to sign up!
+        </p>
     </div>
   </div>
 
