--- a/views/my-account.handlebars
+++ b/views/my-account.handlebars
@@ -16,16 +16,16 @@
 <!-- Comment Card -->
 
 
-<p class="w3-center"><button class="w3-button w3-black" onclick="myFunction('demo1')" id="myBtn"><b>Replies  </b>
+{{!-- <p class="w3-center"><button class="w3-button w3-black" onclick="myFunction('demo1')" id="myBtn"><b>Replies  </b>
         <span class="w3-tag w3-white">1</span></button></p>
-<p class="w3-clear"></p>
-<div class="w3-row w3-margin-bottom" id="demo1" style="display:none">
-    <hr>
-    <div class="w3-col l2 m3">
+<p class="w3-clear"></p> --}}
+{{!-- <div class="w3-row w3-margin-bottom" id="demo1" style="display:none"> --}}
+    {{!-- <hr> --}}
+    {{!-- <div class="w3-col l2 m3">
         <img src="http://placehold.jp/a5d9bc/ffffff/100x60.png?text=USER" style="width:90px;">
+    </div> --}}
+    <div class="w3-bar w3-border">
+        <h4>{{driver.name}}</h4>
+        <p>{{driver.id}}</p>
     </div>
-    <div class="w3-col l10 m9">
-        <h4>{{this.user_id}} <span class="w3-opacity w3-medium">May 3, 2015, 6:32 PM</span></h4>
-        <p>{{this.comment_text}}</p>
-    </div>
-</div>
+    
