--- a/views/members.handlebars
+++ b/views/members.handlebars
@@ -1,13 +1,15 @@
 <div class="w3-padding-32">
   <div class="w3-bar w3-border">
     <a href="/" class="w3-bar-item w3-button">Home</a>
-    <a href="/my-account" class="w3-bar-item w3-button w3-light-grey">My Account</a>
+    <a href="/profile" class="w3-bar-item w3-button w3-light-grey">My Account</a>
     <a href="/api/users/logout" class="w3-bar-item w3-button">Log Out</a>
     {{!-- <a href="#" class="w3-bar-item w3-button w3-hide-small">FAQs</a> --}}
 
   </div>
 </div>
-
+<div>
+  {{!-- <h1><strong>Hello,{{req.session.user_id}}</strong></h1> --}}
+</div>
 <div class="col-12">
   <div class="w3-center w3-grey w3-padding-16">
     <input type="text" class="form-control rounded" id="searchTxt" placeholder="Enter A City Name" aria-label="Search"
@@ -35,8 +37,8 @@
         <button type="button" id="commentButton" data-post-id={{this.id}}>+ Add Driver</button>
         <form class="commentForm">
           <textarea type="text" id="comment" placeholder="Write a comment to check availability."></textarea>
-          <button id="confirmComment" type="submit">Confirm comment</button>
-          <button id="cancelComment" type="reset">Cancel comment</button>
+          <button id="confirmComment" type="submit">Submit</button>
+          <button id="cancelComment" type="reset">Cancel</button>
         </form>
         <!-- Comment Card -->
         {{!-- {{>post-comments item}} --}}
@@ -50,11 +52,11 @@
   {{#if articleSingle.Comments.length}}
   {{#each articleSingle.Comments as |comment|}}
   <section class='comments-view'>
-      <div data-id='{{comment.id}}'>
-        <p class='commentTag' id='content'>{{comment.content}}<br>
-          <small>- Posted by {{comment.user.name}} on {{this.date_created}}</small>
-        </p>
-      </div>
+    <div data-id='{{comment.id}}'>
+      <p class='commentTag' id='content'>{{comment.content}}<br>
+        <small>- Posted by {{comment.user.name}} on {{this.date_created}}</small>
+      </p>
+    </div>
   </section>
   {{/each}}
   {{/if}}
