--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -8,24 +8,24 @@
       <h2>Signup</h2>
 
       <form id="signup-form">
-        <div class="form-group">
+        <div class="form-group" style="margin-bottom:12px">
           <label for="name-signup">name:</label>
           <input class="form-input" type="text" id="name-signup" />
         </div>
-        <div class="form-group">
+        <div class="form-group" style="margin-bottom:12px">
           <label for="username-signup">username:</label>
           <input class="form-input" type="text" id="username-signup" />
         </div>
-        <div class="form-group">
+        <div class="form-group" style="margin-bottom:12px">
           <label for="password-signup">password:</label>
           <input class="form-input" type="password" id="password-signup" />
         </div>
-        <div class="form-group">
+        <div class="form-group" style="margin-bottom:12px">
           <label for="email-signup">email:</label>
           <input class="form-input" type="text" id="email-signup" />
         </div>
 
-        <div class="form-group">
+        <div class="form-group" style="margin-bottom:12px">
           <label for="city-signup">city:</label>
           <input class="form-input" type="text" id="city-signup" />
         </div>
@@ -34,6 +34,7 @@
             Account!</button>
         </div>
       </form>
+      
     </div>
   </div>
   {{!--
