--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -6,16 +6,18 @@
       </p>
       <br>
       <div class="w3-center w3-row-padding w3-grayscale" style="margin-bottom:128px"> --}}
-    {{!-- <style>
-    
-    body {
+        <form class="w3-container">
+    <style>
+    body,
+    .bgimg {
   background-image: url('/public/css/image3.png');
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
 }
     
-  </style> --}}
+  </style>
+  </form>
 {{!-- <img src="/public/css/image3.png" class="w3-image" width="992" height="1108"> --}}
         <h2>Login</h2>
         
