--- a/views/members.handlebars
+++ b/views/members.handlebars
@@ -9,11 +9,12 @@
 </div>
 
 {{!-- <div class="col-12">
-  <div class="w3-center w3-grey w3-padding-16">
-    <input type="text" class="form-control rounded" id="searchTxt" placeholder="Enter A City Name" aria-label="Search"
+  <div class="w3-center w3-grey w3-padding-16"> --}}
+    {{!-- <input type="text" class="form-control rounded" id="searchTxt" placeholder="Enter A City Name" aria-label="Search"
       aria-describedby="search-addon" />
     <button type="button" id="searchBtn" class="w3-button  w3-white w3-border w3-round-large">Search for
-      Drivers</button>
+      Drivers</button> --}}
+      {{!-- <h5>{{this.name}}</h5>
   </div>
 </div> --}}
 
@@ -25,8 +26,7 @@
   <div class="w3-container w3-padding">
     <ul class="w3-ul w3-hoverable w3-white">
       <li class="w3-padding-16">
-        <img src="https://placehold.jp/30/dd6699/ffffff/300x150.png?text=placeholder+image" alt="Image"
-          class="w3-left w3-margin-right" style="width:50px">
+        {{!-- <img src="/images/image3.png" class="w3-left w3-margin-right" style="width:50px"> --}}
 
         <span class="w3-opacity">Parent Driver:</span>
         <h3><strong>{{this.name}}</strong></h3>
@@ -34,7 +34,7 @@
         <span>Pick Up Location:{{this.pickup_location}}</span></br>
         <span>Drop Off Location:{{this.dropoff_location}}</span></br>
         <span class="w3-opacity">Post made on: {{this.date_created}}</span>
-        <button type="button" id="commentButton" data-post-id={{this.id}}>+ Add Driver</button>
+        <button type="button" id="addDriver" data-post-id={{this.id}}>+ Add Driver</button>
         
         <form class="commentForm">
           <textarea type="text" id="comment" placeholder="Write a comment to check availability."></textarea>
