mydashboard route fixed

--- a/views/members.handlebars
+++ b/views/members.handlebars
@@ -1,23 +1,12 @@
 <div class="w3-padding-32">
   <div class="w3-bar w3-border">
     <a href="/" class="w3-bar-item w3-button">Home</a>
-    <a href="/dashboard" class="w3-bar-item w3-button w3-light-grey">My Account</a>
+    <a href="/newpost" class="w3-bar-item w3-button w3-light-grey">My Account</a>
     <a href="/api/users/logout" class="w3-bar-item w3-button">Log Out</a>
     {{!-- <a href="#" class="w3-bar-item w3-button w3-hide-small">FAQs</a> --}}
 
   </div>
 </div>
-
-{{!-- SEARCH BAR
-<div class="col-12">
-  <div class="w3-center w3-grey w3-padding-16"> --}}
-    {{!-- <input type="text" class="form-control rounded" id="searchTxt" placeholder="Enter A City Name"
-      aria-label="Search" aria-describedby="search-addon" />
-    <button type="button" id="searchBtn" class="w3-button  w3-white w3-border w3-round-large">Search for
-      Drivers</button> --}}
-    {{!-- <h5>{{this.name}}</h5>
-  </div>
-</div> --}}
 
 
 
