--- a/views/my-account.handlebars
+++ b/views/my-account.handlebars
@@ -1,9 +1,9 @@
 <div class="w3-padding-32">
   <div class="w3-center w3-grey w3-padding-16">
-      <H1>
-          User Dashboard
-      </H1>
-    </div>
+    <H1>
+      User Dashboard
+    </H1>
+  </div>
 </div>
 
 <div class="w3-padding-32">
@@ -13,19 +13,50 @@
     <a href="/api/users/logout" class="w3-bar-item w3-button">Log Out</a>
   </div>
 </div>
-<!-- Comment Card -->
+<!-- Driver Card -->
+<div class="w3-card-4 w3-margin w3-white">
+
+  <div class="w3-container" id="driver-form">
+    <h3>Create a New Driver Post:</h3>
+
+    <form class="form new-project-form">
+      <div class="form-group">
+        <label for="project-name">PickUp Location:{{this.pickup_Location}}</label>
+        <input class="form-input" type="text" id="project-name" name="project-name" />
+      </div>
+      <div class="form-group">
+        <label for="project-name">Dropoff Location:{{this.dropoff_Location}}</label>
+        <input class="form-input" type="text" id="project-name" name="project-name" />
+      </div>
+      <div class="form-group">
+        <label for="project-name">Driver Availability{{this.availability}}</label>
+        <input class="form-input" type="text" id="project-name" name="project-name" />
+      </div>
+      <div class="form-group">
+        <button type="submit" class="btn btn-primary" id="add-btn">Create</button>
+      </div>
+    </form>
+  </div>
 
 
-<p class="w3-center"><button class="w3-button w3-black" onclick="myFunction('demo1')" id="myBtn"><b>Replies  </b>
-        <span class="w3-tag w3-white">1</span></button></p>
+
+
+  <header class="w3-display-container w3-wide bgimg w3-grayscale-min" id="home">
+    <img src="/css/image2.png" alt="Logo" style="width:50%">
+
+  </header>
+</div>
+
+<p class="w3-center"><button class="w3-button w3-black" onclick="myFunction('demo1')" id="myBtn"><b>Driver's Added
+       </b>
+    <span class="w3-tag w3-white">1</span></button></p>
 <p class="w3-clear"></p>
 <div class="w3-row w3-margin-bottom" id="demo1" style="display:none">
-    <hr>
-    <div class="w3-col l2 m3">
-        <img src="http://placehold.jp/a5d9bc/ffffff/100x60.png?text=USER" style="width:90px;">
-    </div>
-    <div class="w3-bar w3-border">
-        <h4>{{driver.name}}</h4>
-        <p>{{driver.id}}</p>
-    </div>
-    
+  <hr>
+  <div class="w3-col l2 m3">
+    <img src="http://placehold.jp/a5d9bc/ffffff/100x60.png?text=USER" style="width:90px;">
+  </div>
+  <div class="w3-bar w3-border">
+    <h4>{{driver.name}}</h4>
+    <p>{{driver.id}}</p>
+  </div>
