--- a/views/members.handlebars
+++ b/views/members.handlebars
@@ -1,7 +1,8 @@
 <div class="w3-padding-32">
   <div class="w3-bar w3-border">
     <a href="/" class="w3-bar-item w3-button">Home</a>
-    <a href="/newpost" class="w3-bar-item w3-button w3-light-grey">My Account</a>
+    {{!-- <a href="/newpost" class="w3-bar-item w3-button w3-light-grey">My Account</a> --}}
+    <a href="/my-account" class="w3-bar-item w3-button w3-light-grey">My Account</a>
     <a href="/api/users/logout" class="w3-bar-item w3-button">Log Out</a>
     {{!-- <a href="#" class="w3-bar-item w3-button w3-hide-small">FAQs</a> --}}
 
@@ -87,6 +88,7 @@
 </div>
 {{!-- {{/each}} --}}
 </script>
+<script type="text/javascript" src="/js/addDriverButton.js"></script>
 <script type="text/javascript" src="/js/create-comment.js"></script>
 <script type="text/javascript" src="/js/logout.js"></script>
 <script type="text/javascript" src="js/display-search.js"></script>
