fixed add driver button so it works for all driver cards

--- a/views/members.handlebars
+++ b/views/members.handlebars
@@ -24,7 +24,7 @@
         <span>Pick Up Location: {{this.pickup_location}}</span></br>
         <span>Drop Off Location: {{this.dropoff_location}}</span></br>
         <span class="w3-opacity">Post made on: {{this.date_created}}</span></br>
-        <button type="button" id="addDriver" data-post-id={{this.id}}>+ Add Driver</button>
+        <button type="button" class="addDriver" data-post-id={{this.id}}>+ Add Driver</button>
 
         </br>
         <form class="commentForm">
