--- a/views/members.handlebars
+++ b/views/members.handlebars
@@ -18,14 +18,19 @@
       <li class="w3-padding-16">
 
         <span class="w3-opacity">Parent Driver:</span>
-        <h3><strong>{{this.name}}</strong></h3>
+        <h3><strong>
+            <div class="w3-teal w3-hover-light-grey">{{this.name}}
+          </strong></h3>
+
         <h5> Available: {{this.availability}}</h5>
+
         <span>Pick Up Location: {{this.pickup_location}}</span></br>
         <span>Drop Off Location: {{this.dropoff_location}}</span></br>
-        <span class="w3-opacity">Post made on: {{this.date_created}}</span></br>
         <button type="button" id="addDriver" data-post-id={{this.id}}>+ Add Driver</button>
 
         </br>
+        <span class="w3-opacity">Post made on: {{this.date_created}}</span></br>
+
         <form class="commentForm">
           <textarea type="text" rows="4" cols="50" id="comment" data-id="{{post.id}}"
             placeholder="Write a comment to check availability."></textarea>
