comments now being seeded to db

--- a/views/addDriver.handlebars
+++ b/views/addDriver.handlebars
@@ -10,8 +10,8 @@
 
     <div class="container">
       <div class="jumbotron mx-auto text-center">
-        <h1>FUR-Ever Home</h1>
-        <h3>Add a pet for adoption!</h3>
+        <h1>Be a Carpool Hero!</h1>
+        <h3>Add a driver card to your profile!</h3>
         <hr>
         {{!-- Buttons below currently link to nothing --}}
         {{!-- <a href="/" class="btn btn-light btn-lg">
