--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -37,7 +37,7 @@
                 Account!</button>
             </div>
             <p>
-              Already Have an Account with us? Click <a href="login">here</a> to LogIn!
+              Already Have an Account with us? Click <a href="/">here</a> to LogIn!
             </p>
           </form>
 
